force-app/main/default/objects/KCPQ_Ship_To__c/KCPQ_Ship_To__c.object-meta.xml
<CustomObject>
    <description>This object is for Ship to addresses where there are many shipping addresses for a single account</description>
    <label>Ship To</label>
    <nameField>
        <label>Ship To Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ship To</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>