force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_AccountName__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_AccountName__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>This is the customer account name</inlineHelpText>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ship To</relationshipLabel>
    <relationshipName>Ship_To</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>