force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Additional_Instructions__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Additional_Instructions__c</fullName>
    <label>Additional Instructions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>