force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Commission_Percentage__c</fullName>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>