force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Physical_Ship_To_Address_2__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Physical_Ship_To_Address_2__c</fullName>
    <label>Physical Ship To Address 2</label>
    <length>150</length>
    <type>Text</type>
</CustomField>