force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Physical_Ship_To_City__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Physical_Ship_To_City__c</fullName>
    <label>Physical Ship To City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>