force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Physical_Ship_To_Country__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Physical_Ship_To_Country__c</fullName>
    <label>Physical Ship To Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>