force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Physical_Ship_To_Province_State__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Physical_Ship_To_Province_State__c</fullName>
    <label>Physical Ship To Province/State</label>
    <length>40</length>
    <type>Text</type>
</CustomField>