force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Rep_First_Name__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Rep_First_Name__c</fullName>
    <label>Rep First Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>