force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Sales_Agency_Number__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Sales_Agency_Number__c</fullName>
    <label>Sales Agency Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>