force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_SalesrepId__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_SalesrepId__c</fullName>
    <label>SalesrepId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>