force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Ship_To_Id__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Ship_To_Id__c</fullName>
    <description>External ID for Ship to object in P21</description>
    <externalId>true</externalId>
    <label>Ship To Id</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>