force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Ship_To_Number__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Ship_To_Number__c</fullName>
    <label>Ship To Number</label>
    <type>AutoNumber</type>
</CustomField>