force-app/main/default/objects/KCPQ_Ship_To__c/fields/KCPQ_Ship_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Ship_To_Postal_Code__c</fullName>
    <label>Physical Ship To Postal Code</label>
    <length>14</length>
    <type>Text</type>
</CustomField>